--- a/swade-spices/css/spices.css
+++ b/swade-spices/css/spices.css
@@ -2,7 +2,7 @@
 	--active_tab_color: #ffffff;
 	--passive_tab_color: #444444;
 	--checkmark_colour: solid white;
-	--background_chat: "url(../ui/parchment.jpg)";
+	--background_chat: url("/ui/parchment.jpg");
 }
 
 .swade-skill-image {
