--- a/swade-spices/css/spices.css
+++ b/swade-spices/css/spices.css
@@ -3,6 +3,7 @@
 	--passive_tab_color: #444444;
 	--checkmark_colour: solid white;
 	--background_chat: url("/ui/parchment.jpg");
+	--private_color: 3px solid #ffffff00;
 }
 
 .swade-skill-image {
@@ -36,6 +37,9 @@
 .swade.sheet .tabs a.item {
 	background: var(--passive_tab_color);
 }
+.swade.sheet .tabs .item:hover, .swade.sheet .tabs .item:focus {
+    background: var(--active_tab_color) !important;
+}
 
 .swade.sheet .tabs a.item.active {
 	background: var(--active_tab_color);
@@ -54,7 +58,7 @@ textarea#chat-message {
 }
 #chat-log .chat-message.whisper {
     background-image: var(--background_chat);
-    border: 3px solid #ffd453;
+    border: var(--private_color);
 }
 
 /* Keeping this here in case we reconsider.
