--- a/swade-spices/templates/colourConfiguration.html
+++ b/swade-spices/templates/colourConfiguration.html
@@ -4,7 +4,7 @@
     
     <div class="form-group">
         <label>{{localize "SWADESPICE.windowBGColourName"}}</label>
-        <div class="form-fields"><input type="color" name="fightingSkill" id="fightingSkill" value="{{fightingName}}"/></div>
+        <div class="form-fields"><input type="text" value="#faf9edff" name="windowBGColourButton" is="colorpicker-input" data-responsive-color></div>
         <p class="notes">{{localize "SWADESPICE.windowBGColourHint"}}</p>
         </div>
 
