--- a/swade-spices/templates/colourConfiguration.html
+++ b/swade-spices/templates/colourConfiguration.html
@@ -6,7 +6,7 @@
         <label>{{localize "SWADESPICE.windowBGColourName"}}</label>
         <div class="form-fields"><input type="text" value="#faf9edff" name="windowBGColourButton" is="colorpicker-input" data-responsive-color></div>
         <p class="notes">{{localize "SWADESPICE.windowBGColourHint"}}</p>
-        </div>
-
+    </div>
+    <p>{{ something }}</p>
     <button type="submit"><i class="far fa-save"></i>{{localize "SWADESPICE.Save"}}</button>
-    </form>
+</form>
