colour setting sub-menu

--- a/swade-spices/templates/colourConfiguration.html
+++ b/swade-spices/templates/colourConfiguration.html
@@ -4,7 +4,7 @@
     
     <div class="form-group">
         <label>{{localize "SWADESPICE.windowBGColourName"}}</label>
-        <div class="form-fields"><input type="text" value="#faf9edff" name="windowBGColourButton" is="colorpicker-input" data-responsive-color></div>
+        <div class="form-fields"><input type="text" value={{curr_windowBGColourButton}} name="windowBGColourButton" is="colorpicker-input" data-responsive-color></div>
         <p class="notes">{{localize "SWADESPICE.windowBGColourHint"}}</p>
     </div>
     <p>{{ something }}</p>
