--- a/swade-spices/css/spices.css
+++ b/swade-spices/css/spices.css
@@ -164,6 +164,10 @@ textarea#chat-message {
 	border: var(--scrollbar_border);
 }
 
+.skills-label {
+	max-width: 45%;
+}
+
 /* Keeping this here in case we reconsider.
 input.charname {
 	text-align: center;
