--- a/swade-spices/css/spices.css
+++ b/swade-spices/css/spices.css
@@ -164,8 +164,16 @@ textarea#chat-message {
 	border: var(--scrollbar_border);
 }
 
-.skills-label {
+.skill-label {
 	max-width: 45%;
+}
+
+.skill-icon {
+	padding: 0.8px;
+	margin: 0px 0px !important;
+	margin-top: 0em !important;
+	margin-right: 0.3em !important;
+	margin-bottom: 0em;
 }
 
 /* Keeping this here in case we reconsider.
