--- a/swade-spices/css/spices.css
+++ b/swade-spices/css/spices.css
@@ -2,6 +2,9 @@
 	--spicy-left-bar-bg-color: #ffffff;
 	--spicy-top-bar-bg-color: #000000;
 	--spicy-main-body-bg-color: #114400;
+	--spicy-left-bar-bg-image: url("/modules/swade-spices/assets/img/test_background_1.jpg");
+	--spicy-top-bar-bg-image: url("/modules/swade-spices/assets/img/test_background_2.jpg");
+	--spicy-main-body-bg-image: url("/modules/swade-spices/assets/img/test_background_3.jpg");
 }
 
 .spicy-grid-container {
@@ -13,16 +16,19 @@
 
 .spicy-left-bar {
 	background-color: var(--spicy-left-bar-bg-color);
+	background-image: var(--spicy-left-bar-bg-image);
 	grid-column: 1/3;
 	grid-row: 1/10;
 }
 .spicy-top-bar {
 	background-color: var(--spicy-top-bar-bg-color);
+	background-image: var(--spicy-top-bar-bg-image);
 	grid-column: 3/12;
 	grid-row: 1;
 }
 .spicy-main-body {
 	background-color: var(--spicy-main-body-bg-color);
+	background-image: var(--spicy-main-body-bg-image);
 	grid-column: 3/12;
 	grid-row: 2/10;
 }
