--- a/swade-spices/templates/customConfig.html
+++ b/swade-spices/templates/customConfig.html
@@ -11,5 +11,9 @@
             <p class="notes">{{ this.hint }}</p>
         </div>
     {{/each}}
-    <button type="submit"><i class="far fa-save"></i>{{localize "BRSW.Save"}}</button>
+    <div class="form-group">
+        <button type="submit"><i class="far fa-save"></i>{{localize "SWADESPICE.Save"}}</button>
+        <button class="spices-export" type="button"><i class="far fa-save"></i>{{localize "SWADESPICE.Export"}}</button>
+        <button class="spices-import" type="button"><i class="fas fa-file-import"></i> {{ localize "SWADESPICE.Import" }} </button>
+    </div>
 </form>
