Configurable image in left top bar.

--- a/swade-spices/templates/leftBar.html
+++ b/swade-spices/templates/leftBar.html
@@ -2,5 +2,5 @@
 </div>
 <div class="spicyClass-left-bar-content">
     <h1>Health</h1>
-    <h2>Wounds:</h2>
+    <p><h2>Wounds:</h2> <h2>Fatigue:</h2></p>
 </div>
