--- a/swade-spices/css/spices.css
+++ b/swade-spices/css/spices.css
@@ -28,6 +28,24 @@
 	background-repeat: no-repeat;
 	grid-row: 1
 }
+.spicyClass-left-bar-health {
+	display: grid;
+}
+.spicyClass-health-column-1 {
+	grid-column: 1;
+	grid-row: 1;
+}
+.spicyClass-health-column-2 {
+	grid-column: 2;
+	grid-row: 1;
+}
+.spicyClass-health-title{
+	text-align: center;
+	color: darkred;
+}
+input[type="number"].spicyClass-health-input {
+	width: 2em;
+}
 
 .spicy-top-bar {
 	background-color: var(--spicy-top-bar-bg-color);
