--- a/swade-spices/templates/spicySheet.html
+++ b/swade-spices/templates/spicySheet.html
@@ -1,5 +1,5 @@
-<form class="spicy-grid-container" autocomplete="off">
-    <div class="spicy-left-bar">{{>"modules/swade-spices/templates/leftBar.html" }}</div>
-    <div class="spicy-top-bar">BBBB</div>
-    <div class="spicy-main-body">CCCCC</div>
+<form class="spicyClass-grid-container" autocomplete="off">
+    <div class="spicyClass-left-bar">{{>"modules/swade-spices/templates/leftBar.html" }}</div>
+    <div class="spicyClass-top-bar">BBBB</div>
+    <div class="spicyClass-main-body">CCCCC</div>
 </form>
