--- a/swade-spices/css/spices.css
+++ b/swade-spices/css/spices.css
@@ -7,14 +7,14 @@
 	--spicy-main-body-bg-image: "";
 }
 
-.spicy-grid-container {
+.spicyClass-grid-container {
 	display: grid;
 	grid-row-gap: 0;
 	grid-column-gap: 0;
 	margin: -8px;
 }
 
-.spicy-left-bar {
+.spicyClass-left-bar {
 	background-color: var(--spicy-left-bar-bg-color);
 	background-image: var(--spicy-left-bar-bg-image);
 	grid-column: 1/3;
@@ -22,14 +22,14 @@
 	display: grid;
 }
 
-.spicy-top-bar {
+.spicyClass-top-bar {
 	background-color: var(--spicy-top-bar-bg-color);
 	background-image: var(--spicy-top-bar-bg-image);
 	grid-column: 3/12;
 	grid-row: 1;
 }
 
-.spicy-main-body {
+.spicyClass-main-body {
 	background-color: var(--spicy-main-body-bg-color);
 	background-image: var(--spicy-main-body-bg-image);
 	grid-column: 3/12;
