--- a/swade-spices/templates/leftBar.html
+++ b/swade-spices/templates/leftBar.html
@@ -2,7 +2,7 @@
 </div>
 <div class="spicyClass-left-bar-health">
     <div class="spicyClass-health-column-1 spicyClass-health-title">
-        WOUNDS
+      {{localize "SWADE.Wounds"}}
         <div>
             <input
                 class = "spicyClass-health-input"
@@ -13,7 +13,7 @@
         </div>
     </div>
     <div class="spicyClass-health-column-2 spicyClass-health-title">
-        FATIGUE
+      {{localize "SWADE.Fatigue"}}
         <div>
             <input
                 class = "spicyClass-health-input"
@@ -56,7 +56,7 @@
       <span class="spicyClass-checkmark"></span>
     </label>
   </div>
-  <div class="status">
+  <div class="spicyClass-status">
     <label class="spicyClass-check-container"
       >{{localize "SWADE.Stunned"}}
       <input
