--- a/swade-spices/css/left-bar.css
+++ b/swade-spices/css/left-bar.css
@@ -46,3 +46,7 @@ input[type="number"].spicyClass-health-input {
 input[type="number"].spicyClass-health-input:hover {
 	box-shadow: 0 0 5px red;
 }
+
+.spicyClass-status {
+	font-weight: bold;
+}
