--- a/swade-spices/css/spices.css
+++ b/swade-spices/css/spices.css
@@ -12,26 +12,38 @@
 	grid-row-gap: 0;
 	grid-column-gap: 0;
 	margin: -8px;
+	grid-template: repeat(10, minmax(0, 1fr)) / repeat(12, minmax(0, 1fr));
 }
 
 .spicyClass-left-bar {
 	background-color: var(--spicy-left-bar-bg-color);
 	background-image: var(--spicy-left-bar-bg-image);
-	grid-column: 1/3;
-	grid-row: 1/10;
+	grid-column: 1/4;
+	grid-row: 1/11;
 	display: grid;
+	grid-template: repeat(10, minmax(0, 1fr)) / minmax(0, 1fr);
 }
 
 .spicyClass-top-bar {
 	background-color: var(--spicy-top-bar-bg-color);
 	background-image: var(--spicy-top-bar-bg-image);
-	grid-column: 3/12;
-	grid-row: 1;
+	grid-column: 4/13;
+	grid-row: 1/3;
+	display: grid;
+	grid-template: repeat(2, 1fr) /  repeat(10, minmax(0, 1fr));
 }
 
 .spicyClass-main-body {
 	background-color: var(--spicy-main-body-bg-color);
 	background-image: var(--spicy-main-body-bg-image);
-	grid-column: 3/12;
-	grid-row: 2/10;
+	grid-column: 4/13;
+	grid-row: 3/11;
+}
+
+.spicyClass-img {
+	border: 0px;
+	width: 100%;
+	height: 100%;
+	display: block;
+	object-fit: cover;
 }
