--- a/swade-spices/templates/leftBar.html
+++ b/swade-spices/templates/leftBar.html
@@ -25,28 +25,28 @@
     </div>
 </div>
 <div class="spicyClass-status">
-    <div>
+    <span class="spicyClass-status-container">
         <label class="spicyClass-check-container">{{localize "SWADE.Shaken"}}</label>
-        <input type="checkbox" name="data.status.isShaken" {{checked data.data.status.isShaken}} />
-    </div>
-    <div>
+        <input type="checkbox" class="spicyClass-status-checkbox" name="data.status.isShaken" {{checked data.data.status.isShaken}} />
+    </span>
+    <span class="spicyClass-status-container">
         <label class="spicyClass-check-container">{{localize "SWADE.Distr"}}</label>
-        <input type="checkbox" name="data.status.isDistracted" {{checked data.data.status.isDistracted}} />
-    </div>
-    <div>
+        <input type="checkbox" class="spicyClass-status-checkbox" name="data.status.isDistracted" {{checked data.data.status.isDistracted}} />
+    </span>
+    <span class="spicyClass-status-container">
         <label class="spicyClass-check-container">{{localize "SWADE.Vuln"}}</label>
-        <input type="checkbox" name="data.status.isVulnerable" {{checked data.data.status.isVulnerable}} />
-    </div>
-    <div>
+        <input type="checkbox" class="spicyClass-status-checkbox" name="data.status.isVulnerable" {{checked data.data.status.isVulnerable}} />
+    </span>
+    <span class="spicyClass-status-container">
         <label class="spicyClass-check-container">{{localize "SWADE.Stunned"}}</label>
-        <input type="checkbox" name="data.status.isStunned" {{checked data.data.status.isStunned}} />
-    </div>
-    <div>
+        <input type="checkbox" class="spicyClass-status-checkbox" name="data.status.isStunned" {{checked data.data.status.isStunned}} />
+    </span>
+    <span class="spicyClass-status-container">
         <label class="spicyClass-check-container">{{localize "SWADE.Entangled"}}</label>
-        <input type="checkbox" name="data.status.isEntangled" {{checked data.data.status.isEntangled}} />
-    </div>
-    <div>
+        <input type="checkbox" class="spicyClass-status-checkbox" name="data.status.isEntangled" {{checked data.data.status.isEntangled}} />
+    </span>
+    <span class="spicyClass-status-container">
         <label class="spicyClass-check-container">{{localize "SWADE.Bound"}}</label>
-        <input type="checkbox" name="data.status.isBound" {{checked data.data.status.isBound}} />
-    </div>
+        <input type="checkbox" class="spicyClass-status-checkbox" name="data.status.isBound" {{checked data.data.status.isBound}} />
+    </span>
   </div>
