--- a/swade-spices/css/spices.css
+++ b/swade-spices/css/spices.css
@@ -30,7 +30,7 @@
 	grid-column: 4/13;
 	grid-row: 1/3;
 	display: grid;
-	grid-template: repeat(2, 1fr) /  repeat(10, minmax(0, 1fr));
+	grid-template: repeat(2, 1fr) /  repeat(3, minmax(0, 1fr)) 30%;
 }
 
 .spicyClass-main-body {
@@ -46,4 +46,5 @@
 	height: 100%;
 	display: block;
 	object-fit: cover;
+	padding: .5em;
 }
