--- a/swade-spices/css/top-bar.css
+++ b/swade-spices/css/top-bar.css
@@ -1,10 +1,14 @@
-.spicyClass-text-zone {
-    grid-column: 1/9;
+.spicyClass-name {
+    grid-column: 1/4;
     grid-row: 1;
 }
 
 .spicyClass-img-zone {
-    grid-column: 9/11;
-    grid-row: 1/2;
+    grid-column: 4/5;
+    grid-row: 1/3;
     float: right;
+}
+
+.spicyClass-header-input {
+    grid-row: 2;
 }
