Derived stats titles.

--- a/swade-spices/templates/leftBar.html
+++ b/swade-spices/templates/leftBar.html
@@ -49,4 +49,21 @@
         <label class="spicyClass-check-container">{{localize "SWADE.Bound"}}</label>
         <input type="checkbox" class="spicyClass-status-checkbox" name="data.status.isBound" {{checked data.data.status.isBound}} />
     </span>
-  </div>
+</div>
+<div class="spicyClass-derived">
+    <div class="spicyClass-derived-title">
+        {{localize "SWADE.Derived"}}
+    </div>
+    <div class="spicyClass-derived-name">
+        {{ localize "SWADE.Parry" }}
+    </div>
+    <div class="spicyClass-derived-name">
+        {{ localize "SWADE.Tough" }}
+    </div>
+    <div class="spicyClass-derived-name">
+        {{localize "SWADE.Pace"}}
+    </div>
+    <div class="spicyClass-derived-name">
+        {{ localize "SWADE.Size" }}
+    </div>
+</div>
