--- a/swade-spices/css/left-bar.css
+++ b/swade-spices/css/left-bar.css
@@ -25,7 +25,8 @@
 
 .spicyClass-status {
 	grid-column: 1;
-	grid-row: 3/6;
+	grid-row: 3/5;
+	font-weight: bold;
 }
 
 .spicyClass-health-title{
@@ -46,11 +47,27 @@ input[type="number"].spicyClass-health-input:hover {
 	box-shadow: 0 0 5px red;
 }
 
-.spicyClass-status {
-	font-weight: bold;
-}
-
 .spicyClass-status-container {
 	width: 45%;
 	display: inline-block;
+}
+
+.spicyClass-derived {
+	grid-column: 1;
+	grid-row: 5/7;
+	display: grid;
+	grid-template: 2em 2em 1fr 2em 1fr / 50% 50%;
+}
+
+.spicyClass-derived-title {
+	text-align: center;
+	font-weight: bold;
+	font-size: 15pt;
+	color: var(--spicy-left-bar-health-text-color);
+	grid-column: 1/3;
+	grid-row: 1;
+}
+
+.spicyClass-derived-name {
+	text-align: center;
 }
