--- a/swade-spices/css/left-bar.css
+++ b/swade-spices/css/left-bar.css
@@ -6,36 +6,52 @@
 	--spicy-checkmark-color: #8C0809;
 }
 
+.mx-1 {
+	margin: 0.8rem 1rem 0.3rem;
+	border-top: 1px solid black;
+    border-bottom: none;
+	grid-row: 1;
+	grid-column: 1/3;
+}
+
 .spicyClass-left-bar-logo {
 	background-image: var(--spicy-left-bar-logo);
-	background-size: contain;
-	background-repeat: no-repeat;
-	background-position: center;
-	grid-row: 1;
-	grid-column: 1;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    grid-row: 1/4;
 }
 
 .spicyClass-left-bar-health {
-	display: grid;
-	font-weight: bold;
-	font-size: 15pt;
-	grid-row: 2;
-	grid-template: minmax(0, 1fr) / repeat(2, minmax(0, 1fr));
+	color: var(--spicy-left-bar-health-text-color);
+    display: grid;
+    grid-row: 4;
+    grid-template: minmax(0, 1fr) / repeat(2, minmax(0, 1fr));
+    font-weight: bold;
 }
 
 .spicyClass-status {
-	grid-column: 1;
-	grid-row: 3/5;
-	font-weight: bold;
+    grid-column: 1;
+    grid-row: 5/6;
+    display: grid;
+    grid-template: 1rem 1.3rem 1.3rem 1.3rem /50% 50%;
+    font-weight: bold;
 }
 
 .spicyClass-health-title{
 	text-align: center;
-	color: var(--spicy-left-bar-health-text-color);
+    color: var(--spicy-left-bar-health-text-color);
+}
+
+.spicyClass-health-value {
+    font-size: 1.7rem;
+    justify-content: center;
+    display: inline-flex;
+    align-items: baseline;
 }
 
 input[type="number"].spicyClass-health-input {
-	width: 2em;
+	width: 0rem;
 	border: none;
 	padding: 0px;
 	color: var(--spicy-left-bar-health-text-color);
@@ -48,15 +64,19 @@ input[type="number"].spicyClass-health-input:hover {
 }
 
 .spicyClass-status-container {
-	width: 45%;
-	display: inline-block;
+	width: 49%;
+    display: inline-grid;
+    grid-auto-flow: column;
+    justify-content: start;
+    font-size: 0.6rem;
+    align-items: center;
 }
 
 .spicyClass-derived {
-	grid-column: 1;
-	grid-row: 5/8;
-	display: grid;
-	grid-template: 2em 2em 1fr 2em 1fr / 50% 50%;
+    grid-column: 1;
+    grid-row: 7/13;
+    display: grid;
+    grid-template: 1rem 2rem 0fr 4rem 0fr / 50% 50%;
 }
 
 .spicyClass-derived-title {
@@ -65,25 +85,63 @@ input[type="number"].spicyClass-health-input:hover {
 	font-size: 15pt;
 	color: var(--spicy-left-bar-health-text-color);
 	grid-column: 1/3;
-	grid-row: 1;
+	grid-row: 2;
 }
 
 .spicyClass-derived-name {
 	text-align: center;
+    font-weight: bold;
+    font-size: 1rem;
 }
 
+.spicyClass-derived-value {
+    background-color: rgb(0 0 0 / 10%);
+    border-radius: 2px;
+    justify-self: center;
+    max-height: 62px;
+	text-align: center;
+    width: 70%;
+}
+
+    .spicyClass-derived-value > input {
+        background-color: transparent;
+        border: none;
+        color: inherit;
+        font-size: 3rem;
+        height: 70%;
+        width: 70%;
+    }
+
+    .spicyClass-derived-value > button {
+        background-color: transparent;
+        border: none;
+        font-size: 1.5rem;
+        position: relative;
+        text-align: center;
+        top: -0.5rem;
+        width: 70%;
+    }
+
+        .spicyClass-derived-value > button.spicyClass-running-die {
+            top: 0rem;
+            background-size: 2rem;
+            width: 33px;
+        }
+
 .spicyClass-running-die {
-    max-height: 28px;
+	height: 30px;
+    width: 25px;
     margin: 0 2px;
     padding: 0 2px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
+    border: none;
+    background-color: transparent;
 }
-
 .spicyClass-bennies {
 	grid-column: 1;
-	grid-row: 8/10;
+	grid-row: 13/16;
 }
 
 .spicyClass-bennies-title {	text-align: center;
@@ -95,5 +153,5 @@ input[type="number"].spicyClass-health-input:hover {
 
 .spicyClass-conviction {
 	grid-column: 1;
-	grid-row: 10/11;
+	grid-row: 17/18;
 }
