--- a/swade-spices/templates/leftBar.html
+++ b/swade-spices/templates/leftBar.html
@@ -3,54 +3,57 @@
 <div class="spicyClass-left-bar-health">
     <div class="spicyClass-health-title">
       {{localize "SWADE.Wounds"}}
-        <div>
+        <span class="spicyClass-health-value">
             <input
                 class = "spicyClass-health-input"
                 type="number"
                 name="data.wounds.value"
                 value="{{data.data.wounds.value}}"/>
             /{{data.data.wounds.max}}
-        </div>
+        </span>
     </div>
     <div class="spicyClass-health-title">
       {{localize "SWADE.Fatigue"}}
-        <div>
+        <span class="spicyClass-health-value">
             <input
                 class = "spicyClass-health-input"
                 type="number"
                 name="data.fatigue.value"
                 value="{{data.data.fatigue.value}}"/>
             /{{data.data.fatigue.max}}
-        </div>
+        </span>
     </div>
 </div>
 <div class="spicyClass-status">
+    <hr class="mx-1">
+
     <span class="spicyClass-status-container">
-        <label class="spicyClass-check-container">{{localize "SWADE.Shaken"}}</label>
         <input type="checkbox" class="spicyClass-status-checkbox" name="data.status.isShaken" {{checked data.data.status.isShaken}} />
+        <label class="spicyClass-check-container">{{localize "SWADE.Shaken"}}</label>
     </span>
     <span class="spicyClass-status-container">
-        <label class="spicyClass-check-container">{{localize "SWADE.Distr"}}</label>
         <input type="checkbox" class="spicyClass-status-checkbox" name="data.status.isDistracted" {{checked data.data.status.isDistracted}} />
+        <label class="spicyClass-check-container">{{localize "SWADE.Distr"}}</label>
     </span>
     <span class="spicyClass-status-container">
-        <label class="spicyClass-check-container">{{localize "SWADE.Vuln"}}</label>
         <input type="checkbox" class="spicyClass-status-checkbox" name="data.status.isVulnerable" {{checked data.data.status.isVulnerable}} />
+        <label class="spicyClass-check-container">{{localize "SWADE.Vuln"}}</label>
     </span>
     <span class="spicyClass-status-container">
-        <label class="spicyClass-check-container">{{localize "SWADE.Stunned"}}</label>
         <input type="checkbox" class="spicyClass-status-checkbox" name="data.status.isStunned" {{checked data.data.status.isStunned}} />
+        <label class="spicyClass-check-container">{{localize "SWADE.Stunned"}}</label>
     </span>
     <span class="spicyClass-status-container">
-        <label class="spicyClass-check-container">{{localize "SWADE.Entangled"}}</label>
         <input type="checkbox" class="spicyClass-status-checkbox" name="data.status.isEntangled" {{checked data.data.status.isEntangled}} />
+        <label class="spicyClass-check-container">{{localize "SWADE.Entangled"}}</label>
     </span>
     <span class="spicyClass-status-container">
-        <label class="spicyClass-check-container">{{localize "SWADE.Bound"}}</label>
         <input type="checkbox" class="spicyClass-status-checkbox" name="data.status.isBound" {{checked data.data.status.isBound}} />
+        <label class="spicyClass-check-container">{{localize "SWADE.Bound"}}</label>
     </span>
 </div>
 <div class="spicyClass-derived">
+    <hr class="mx-1">
     <div class="spicyClass-derived-title">
         {{localize "SWADE.Derived"}}
     </div>
@@ -62,17 +65,17 @@
     </div>
     <div class="spicyClass-derived-value">
         <input name="data.stats.parry.value" value="{{data.data.stats.parry.value}}"
-               type="text" placeholder="{{ localize 'SWADE.Parry' }}"
-               data-dtype="Number" {{disabled data.data.details.autoCalcParry}}>
+                type="text" placeholder="{{ localize 'SWADE.Parry' }}"
+                data-dtype="Number" {{disabled data.data.details.autoCalcParry}}>
         <button type="button" class="parry-display">
             {{signedString data.data.stats.parry.modifier}}
         </button>
     </div>
     <div class="spicyClass-derived-value">
         <input id="toughness" name="data.stats.toughness.value" type="text"
-               value="{{data.data.stats.toughness.value}}"
-               placeholder="{{localize 'SWADE.Tough'}}"
-               data-dtype="Number" {{disabled data.data.details.autoCalcToughness}}>
+                value="{{data.data.stats.toughness.value}}"
+                placeholder="{{localize 'SWADE.Tough'}}"
+                data-dtype="Number" {{disabled data.data.details.autoCalcToughness}}>
         <button type="button" class="armor-display" {{disabled data.data.details.autoCalcToughness}}>
             {{data.data.stats.toughness.armor}}
         </button>
@@ -85,7 +88,7 @@
     </div>
     <div class="spicyClass-derived-value">
         <input type="text" value="{{data.data.stats.speed.adjusted}}" data-dtype="Number"
-               placeholder="{{ localize 'SWADE.Pace' }}" disabled/>
+                placeholder="{{ localize 'SWADE.Pace' }}" disabled/>
         <button type="button" class="spicyClass-running-die"
                 title="{{localize 'SWADE.Roll'}} {{localize 'SWADE.RunningDie'}}"
                 style="background-image: url(systems/swade/assets/official/dice/d{{data.data.stats.speed.runningDie}}.svg);">
@@ -94,10 +97,11 @@
     </div>
     <div class="spicyClass-derived-value">
         <input name="data.stats.size" type="text" value="{{data.data.stats.size}}"
-          data-dtype="Number"/>
+            data-dtype="Number"/>
     </div>
 </div>
 <div class="spicyClass-bennies">
+    <hr class="mx-1">
     <div class="spicyClass-bennies-title">
         {{localize "SWADE.Bennies"}}
     </div>
@@ -117,14 +121,15 @@
 </div>
 <div class="spicyClass-conviction">
     <button type="button" class="conviction-toggle">
-      <strong class="{{#if data.data.details.conviction.active}}pulse{{/if}}">
-        {{~#if data.data.details.conviction.active~}} {{localize
-        "SWADE.ConvictionActive"}} {{~else~}} {{localize "SWADE.Conv"}} {{/if}}
-      </strong>
+        <strong class="{{#if data.data.details.conviction.active}}pulse{{/if}}">
+            {{~#if data.data.details.conviction.active~}} {{localize
+            "SWADE.ConvictionActive"}} {{~else~}} {{localize "SWADE.Conv"}} {{/if}}
+        </strong>
     </button>
     <div>
-      <input type="Number" class="conviction-counter" name="data.details.conviction.value"
-             value="{{data.data.details.conviction.value}}"
-             data-dtype="Number"/>
+    <input type="Number" class="conviction-counter" 
+            name="data.details.conviction.value"
+            value="{{data.data.details.conviction.value}}"
+            data-dtype="Number"/>
     </div>
 </div>
