<hr> left bar class changed to spicyClass-left-bar-hr (Kyane)

--- a/swade-spices/templates/leftBar.html
+++ b/swade-spices/templates/leftBar.html
@@ -25,7 +25,7 @@
     </div>
 </div>
 <div class="spicyClass-status">
-    <hr class="mx-1">
+    <hr class="spicyClass-left-bar-hr">
 
     <span class="spicyClass-status-container">
         <input type="checkbox" class="spicyClass-status-checkbox" name="data.status.isShaken" {{checked data.data.status.isShaken}} />
@@ -53,7 +53,7 @@
     </span>
 </div>
 <div class="spicyClass-derived">
-    <hr class="mx-1">
+    <hr class="spicyClass-left-bar-hr">
     <div class="spicyClass-derived-title">
         {{localize "SWADE.Derived"}}
     </div>
@@ -101,7 +101,7 @@
     </div>
 </div>
 <div class="spicyClass-bennies">
-    <hr class="mx-1">
+    <hr class="spicyClass-left-bar-hr">
     <div class="spicyClass-bennies-title">
         {{localize "SWADE.Bennies"}}
     </div>
