--- a/swade-spices/css/left-bar.css
+++ b/swade-spices/css/left-bar.css
@@ -6,7 +6,7 @@
 	--spicy-checkmark-color: #8C0809;
 }
 
-.mx-1 {
+.spicyClass-left-bar-hr {
 	margin: 0.8rem 1rem 0.3rem;
 	border-top: 1px solid black;
     border-bottom: none;
