--- a/swade-spices/css/left-bar.css
+++ b/swade-spices/css/left-bar.css
@@ -7,7 +7,7 @@
 }
 
 .spicyClass-left-bar-hr {
-	margin: 0.8rem 1rem 0.3rem;
+	margin: 0.7rem 1rem 0.3rem;
 	border-top: 1px solid black;
     border-bottom: none;
 	grid-row: 1;
@@ -74,9 +74,9 @@ input[type="number"].spicyClass-health-input:hover {
 
 .spicyClass-derived {
     grid-column: 1;
-    grid-row: 7/13;
+    grid-row: 7/11;
     display: grid;
-    grid-template: 1rem 2rem 0fr 4rem 0fr / 50% 50%;
+    grid-template: 1rem 1.5rem 0fr 3.5rem 0fr / 50% 50%;
 }
 
 .spicyClass-derived-title {
@@ -98,7 +98,7 @@ input[type="number"].spicyClass-health-input:hover {
     background-color: rgb(0 0 0 / 10%);
     border-radius: 2px;
     justify-self: center;
-    max-height: 62px;
+    max-height: 50px;
 	text-align: center;
     width: 70%;
 }
@@ -107,25 +107,26 @@ input[type="number"].spicyClass-health-input:hover {
         background-color: transparent;
         border: none;
         color: inherit;
-        font-size: 3rem;
-        height: 70%;
+        font-size: 2rem;
+        height: 60%;
         width: 70%;
     }
 
     .spicyClass-derived-value > button {
         background-color: transparent;
         border: none;
-        font-size: 1.5rem;
+        font-size: 1.2rem;
         position: relative;
         text-align: center;
-        top: -0.5rem;
+        top: -0.35rem;
         width: 70%;
     }
 
         .spicyClass-derived-value > button.spicyClass-running-die {
-            top: 0rem;
-            background-size: 2rem;
-            width: 33px;
+            top: -0.4rem;
+            background-size: 1.5rem;
+            width: 25px;
+            height: 25px;
         }
 
 .spicyClass-running-die {
@@ -141,7 +142,7 @@ input[type="number"].spicyClass-health-input:hover {
 }
 .spicyClass-bennies {
 	grid-column: 1;
-	grid-row: 13/16;
+	grid-row: 12/16;
 }
 
 .spicyClass-bennies-title {	text-align: center;
